--- a/gallery.html
+++ b/gallery.html
@@ -24,11 +24,11 @@
             <a class="navbar-brand" href="/">E-cell of REC</a>
           </div>
           <ul class="nav navbar-nav">
-            <li ><a href="/">Home</a></li>
-            <li ><a href="/aboutus">Who We Are</a></li>
-	        <li class="active"><a href="/masterpiecemoments">Masterpiece Moments</a></li>
-    	    <li><a href="/team">The Entrepreneurs Within</a></li>
-        	<li><a href="/visionvault">VisionVault Exchange</a></li>
+            <li ><a href="index.html">Home</a></li>
+            <li ><a href="aboutus.html">Who We Are</a></li>
+	        <li class="active"><a href="gallery.html">Masterpiece Moments</a></li>
+    	    <li><a href="team.html">The Entrepreneurs Within</a></li>
+        	<li><a href="visionvault.html">VisionVault Exchange</a></li>
 
           </ul>
         </div>
@@ -43,8 +43,8 @@
             <div class="event-title">Event 1</div>
             <div class="photo-gallery-container">
                 <div class="photo-gallery">
-                    <img src="{{photo1}}" alt="Event 1 Photo 1">
-                    <img src="{{photo2}}" alt="Event 1 Photo 2">
+                    <img src="static\images\event1\photo1.png" alt="Event 1 Photo 1">
+                    <img src="static\images\event1\photo2.png" alt="Event 1 Photo 2">
                     <!-- Add more photos as needed -->
                 </div>
             </div>
@@ -55,8 +55,8 @@
             <div class="event-title">Event 2</div>
             <div class="photo-gallery-container">
                 <div class="photo-gallery">
-                    <img src="{{photo1}}" alt="Event 2 Photo 1">
-                    <img src="{{photo2}}" alt="Event 2 Photo 2">
+                    <img src="static\images\event1\photo1.png" alt="Event 2 Photo 1">
+                    <img src="static\images\event1\photo2.png" alt="Event 2 Photo 2">
                     <!-- Add more photos as needed -->
                 </div>
             </div>
