--- a/visionvault.html
+++ b/visionvault.html
@@ -17,11 +17,11 @@
             <a class="navbar-brand" href="/">E-cell of REC</a>
           </div>
           <ul class="nav navbar-nav">
-            <li ><a href="/">Home</a></li>
-            <li><a href="/aboutus">Who We Are</a></li>
-            <li><a href="/masterpiecemoments">Masterpiece Moments</a></li>
-            <li ><a href="/team">The Entrepreneurs Within</a></li>
-            <li class="active"><a href="/visionvault">VisionVault Exchange</a></li>
+            <li ><a href="index.html">Home</a></li>
+            <li ><a href="aboutus.html">Who We Are</a></li>
+	        <li ><a href="gallery.html">Masterpiece Moments</a></li>
+    	    <li><a href="team.html">The Entrepreneurs Within</a></li>
+        	<li class="active"><a href="visionvault.html">VisionVault Exchange</a></li>
 
           </ul>
         </div>
