--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,7 @@
 			</header>
 			<p>The seeds of entrepreneurship were sown in 2015 as Rajalakshmi Engineering College (REC) envisioned a platform to nurture entrepreneurial spirit among students.<br><br>EDC was established with a vision to empower students, create job opportunities, and contribute to the nation's development.<br><br>Initial activities included meetings with faculty, agenda discussions, and the launch of E-Awareness campaigns.
 			</p>
-			<img src="{{img1}}" alt="" />
+			
 		  </div>
 		</article>
 		<article class="stop">
@@ -63,7 +63,7 @@
 			<p>March 10th and 11th, 2016 witnessed one of the greatest events, E-Conclave'16 that inspired and exhilarated the idea of entrepreneurship.
 			<br><br>Our event featured a wide range of activities, including guest lectures, panel discussions, motivational talks, workshops, debates and engaging showcases of start-ups.<br><br>With an impressive turnout of approximately 500 participants and the participation of 15 innovative start-ups, our event was a resounding success.<br><br>This achievement is a testament to the collaborative efforts of our dedicated team, with unwavering support from the management, effective coordination by the E-Cell, and the remarkable dedication of our students.<br><br>
 			We are proud to announce that our event has earned national recognition as a prestigious E-Conclave hosted at REC.</p>
-			<img src="{{img2}}" alt="" />
+			
 		  </div>
 		</article>
 		<article class="stop">
@@ -73,46 +73,71 @@
 			</header>
 			<p>"E Week '16" took place over four dynamic days in April 2016, offering an array of engaging activities, including workshops, panel discussions, and seminars.<br><br>The event had a clear focus on promoting entrepreneurship, innovation, and collaboration, aiming to inspire and educate participants in these areas.<br><br>"E Week '16" attracted a diverse audience, including students, entrepreneurs, and professionals, creating a platform for meaningful knowledge exchange and networking opportunities.<br><br>The event left a lasting impact by fostering a spirit of creativity and entrepreneurial enthusiasm, contributing to the growth and development of the entrepreneurial community it targeted.
 			</p>
-			<img src="{{img3}}" alt="" />
+			
 		  </div>
 		</article>
 		<article class="stop">
 		  <div class="text">
 			<header>
-			  <h2>E-WEEK 2018</h2>
+			  <h2>E-WEEK'18</h2>
 			</header>
 			<p>Day 1: Motivational speaker Jaikanth M.C. shared his success story and valuable insights, kicking off E-Week on an inspiring note.<br><br>Day 2: The day revolved around expanding the mind through new experiences, featuring entrepreneurial games and a business quiz.<br><br>Day 3: Participants engaged in a business quiz, highlighting the importance of knowledge in the business world.<br><br>Day 4: The focus shifted to risk management, with various games testing decision-making abilities under pressure.<br><br>Day 5: Similar to "Shark Tank," participants pitched their business ideas to a judging panel, making it the ultimate test of entrepreneurship skills. </p>
-			<img src="{{img4}}" alt="" />
+			
 		  </div>
 		</article>
 		<article class="stop">
 		  <div class="text">
 			<header>
-			  <h2>Compact cassette</h2>
-			  <time>1971</time> - Philips
-			</header>
-			<p>A small, magnetic tape cassette used for storing data.</p>
-			<img src="https://assets.codepen.io/159218/compact-cassette.jpg" alt="" />
+				<h2>E-WEEK'19</h2>
+			  </header>
+			  <p>
+				Day 1 : E-Awareness Camp'19
+			<br><br>- On the first day, Mr. Lokeshwaran S., Founder of Receptacle Enterprises Private Limited, served as the speaker, aiming to motivate first-year students towards entrepreneurship.
+			<br><br>	
+				Day 2 : Adzap
+			<br><br>- The second day introduced the Adzap challenge, where participants had to advertise a product within three minutes. The emphasis was on creativity, productivity, and managerial skills.
+			<br><br>
+				Day 3 : Dexter Tester
+			<br><br>- Day three featured the Dexter Tester 3.0 event, designed to test participants' risk-taking abilities.
+			<br><br>
+				Day 4 : H.U.S.T.L.E 
+			<br><br>- The focus shifted to emulating the Start-Up ecosystem with the H.U.S.T.L.E Business Plan Competition. The outcome was an informative competition refining business ideas.
+			<br><br>
+				Day 5 : Business Quiz
+			<br><br>- The fifth day involved a Business Quiz that evaluated participants' knowledge and interest in entrepreneurship, similar to the format of a quiz show.
+			  
 		  </div>
 		</article>
 		<article class="stop">
 		  <div class="text">
 			<header>
-			  <h2>Zip drive</h2>
-			  <time>1980</time> - Iomega
-			</header>
-			<p>A removable disk drive with a capacity of up to 100 MB.</p>
-			<img src="https://assets.codepen.io/159218/zip-drive.jpg" alt="" />
+				<h2>E-CONCLAVE’19</h2>
+			  </header>
+			  <p>
+				Day 1 : Ideas Rule:
+				<br><br>
+				Inauguration by Dr. V. Murali Baskar, featuring Chief Guest Mr. Ratheesh Krishnan, commenced E-CONCLAVE’19, with a focus on entrepreneurship through workshops, guest lectures, and stand-up comedy sessions.<br><br>
+				Day 2 : Make It Happen:
+				<br><br>
+				E-CONCLAVE’19 shifted its focus to actionable steps on the second day, with a Start-Up and Idea Showcase, along with workshops delving into Design Thinking and Business Plans.
+				<br><br>Day 3 : Zero to Hero:
+				<br><br>
+				The concluding day brought entrepreneurs sharing success stories, covering diverse genres from grassroots initiatives to social entrepreneurship, providing a holistic view of the entrepreneurial landscape.</p>
 		  </div>
 		</article>
 		<article class="stop">
 		  <div class="text">
 			<header>
-			  <h2>CD-ROM</h2>
-			  <time>1984</time> - James Russell
-			</header>
-			<p>A compact disc that can store up to 700 MB of data.</p>
-			<img src="https://assets.codepen.io/159218/cd-rom.png" alt="" />
+				<h2>Online-Events </h2>
+				<h4>March 2020 to July 2020</h4>
+			  </header>
+			  <p><strong>E fter C’19 :</strong><br><br>
+				Motivation: Entrepreneurial Opportunity after COVID-19.<br><br>
+				Speaker: Mr. Sasikumar Chandran, Founder of HUMCEN.<br><br>
+			<strong>EQ – TRIVIA’20:</strong><br><br>
+
+				Event: Entrepreneurial quiz conducted online.<br><br>
+				Participation: 774 faculty and students from various institutions.</p>
 		  </div>
 		</article>
 		<article class="stop">
