content in about us added

--- a/aboutus.html
+++ b/aboutus.html
@@ -51,7 +51,7 @@
 			</header>
 			<p>The seeds of entrepreneurship were sown in 2015 as Rajalakshmi Engineering College (REC) envisioned a platform to nurture entrepreneurial spirit among students.<br><br>EDC was established with a vision to empower students, create job opportunities, and contribute to the nation's development.<br><br>Initial activities included meetings with faculty, agenda discussions, and the launch of E-Awareness campaigns.
 			</p>
-			
+			<img src="static\images\icons\ECELL LOGO.png" alt="" />
 		  </div>
 		</article>
 		<article class="stop">
@@ -63,7 +63,7 @@
 			<p>March 10th and 11th, 2016 witnessed one of the greatest events, E-Conclave'16 that inspired and exhilarated the idea of entrepreneurship.
 			<br><br>Our event featured a wide range of activities, including guest lectures, panel discussions, motivational talks, workshops, debates and engaging showcases of start-ups.<br><br>With an impressive turnout of approximately 500 participants and the participation of 15 innovative start-ups, our event was a resounding success.<br><br>This achievement is a testament to the collaborative efforts of our dedicated team, with unwavering support from the management, effective coordination by the E-Cell, and the remarkable dedication of our students.<br><br>
 			We are proud to announce that our event has earned national recognition as a prestigious E-Conclave hosted at REC.</p>
-			
+			<img src="static\images\icons\conclave16.png" alt="" />	
 		  </div>
 		</article>
 		<article class="stop">
@@ -73,7 +73,7 @@
 			</header>
 			<p>"E Week '16" took place over four dynamic days in April 2016, offering an array of engaging activities, including workshops, panel discussions, and seminars.<br><br>The event had a clear focus on promoting entrepreneurship, innovation, and collaboration, aiming to inspire and educate participants in these areas.<br><br>"E Week '16" attracted a diverse audience, including students, entrepreneurs, and professionals, creating a platform for meaningful knowledge exchange and networking opportunities.<br><br>The event left a lasting impact by fostering a spirit of creativity and entrepreneurial enthusiasm, contributing to the growth and development of the entrepreneurial community it targeted.
 			</p>
-			
+			<img src="static\images\icons\E_week16.png" alt="" />	
 		  </div>
 		</article>
 		<article class="stop">
@@ -82,7 +82,7 @@
 			  <h2>E-WEEK'18</h2>
 			</header>
 			<p>Day 1: Motivational speaker Jaikanth M.C. shared his success story and valuable insights, kicking off E-Week on an inspiring note.<br><br>Day 2: The day revolved around expanding the mind through new experiences, featuring entrepreneurial games and a business quiz.<br><br>Day 3: Participants engaged in a business quiz, highlighting the importance of knowledge in the business world.<br><br>Day 4: The focus shifted to risk management, with various games testing decision-making abilities under pressure.<br><br>Day 5: Similar to "Shark Tank," participants pitched their business ideas to a judging panel, making it the ultimate test of entrepreneurship skills. </p>
-			
+			<img src="static\images\icons\e_week18.jpg" alt="" />	
 		  </div>
 		</article>
 		<article class="stop">
@@ -105,7 +105,7 @@
 			<br><br>
 				Day 5 : Business Quiz
 			<br><br>- The fifth day involved a Business Quiz that evaluated participants' knowledge and interest in entrepreneurship, similar to the format of a quiz show.
-			  
+			<img src="static\images\icons\e_week19.jpg" alt="" />	
 		  </div>
 		</article>
 		<article class="stop">
@@ -123,6 +123,7 @@
 				<br><br>Day 3 : Zero to Hero:
 				<br><br>
 				The concluding day brought entrepreneurs sharing success stories, covering diverse genres from grassroots initiatives to social entrepreneurship, providing a holistic view of the entrepreneurial landscape.</p>
+				<img src="static\images\icons\e_conclave19.jpg" alt="" />
 		  </div>
 		</article>
 		<article class="stop">
@@ -134,30 +135,52 @@
 			  <p><strong>E fter C’19 :</strong><br><br>
 				Motivation: Entrepreneurial Opportunity after COVID-19.<br><br>
 				Speaker: Mr. Sasikumar Chandran, Founder of HUMCEN.<br><br>
+				<img src="static\images\icons\efter.jpg" alt="" /><br><br>
 			<strong>EQ – TRIVIA’20:</strong><br><br>
 
 				Event: Entrepreneurial quiz conducted online.<br><br>
 				Participation: 774 faculty and students from various institutions.</p>
+				<img src="static\images\icons\eq_trivia.jpg" alt="" />
+			</div>
+		</article>
+		<article class="stop">
+		  <div class="text">
+			<header>
+				<h2>Online-Events </h2>
+				<h4>2020-2021</h4>
+			  </header>
+			  <p><strong>Dream V :</strong><br><br>
+				Event: Online event on Effective Financial Management.<br><br>
+				Format: Fantasy points based on IPL 2021.<br><br>
+				Participation: 100 Participants.<br><br>
+				<img src="static\images\icons\dream.jpg" alt="" /><br><br>
+			<strong>Lean Start-up and Minimum Viable Products/Business:</strong><br><br>
+			EDC IIC Chapter Quarter IV Event.<br>
+			Presentation on Lean start-up and minimum viable products.<br>
+			Speakers: Mr. Prasanna and Mr. Mathew.
+			<br><br>
+			Attendance: 150 participants.<br><br>
+			<strong>E2 - Entrepreneurial Fest :</strong><br><br>
+			Chief Guests: Mr. TamilMani and Mr. Ravichandran Kumar.<br>
+			Events: Reality Check, Buy Mine.<br>
+			Participants: 250.<br><br>
+			Highlights: Talks on entrepreneurship, pitch deck event, stock market insights, and a virtual business experience.
+		
+		
+		</p>
+		  </div>
 		  </div>
 		</article>
 		<article class="stop">
 		  <div class="text">
 			<header>
-			  <h2>DVD-ROM</h2>
-			  <time>1994</time> - Kenji Kashiwaya
+			  <h2>Initiation Day - Aurora’22</h2>
+			  <time>2022</time> 
 			</header>
-			<p>A digital versatile disc that can store up to 4.7 GB of data.</p>
-			<img src="https://assets.codepen.io/159218/dvd-rom.png" alt="" />
-		  </div>
-		</article>
-		<article class="stop">
-		  <div class="text">
-			<header>
-			  <h2>Blu-ray Disc</h2>
-			  <time>1995</time> - Sony and Philips
-			</header>
-			<p>A high-definition optical disc that can store up to 25 GB of data.</p>
-			<img src="https://assets.codepen.io/159218/blu-ray.png" alt="" />
+			<p>Investiture Ceremony honoring Council Members.
+				<br>Chief Guest: Bala Subramanian.</p>
+			<img src="static\images\icons\aurora22.jpg" alt="" />
+
 		  </div>
 		</article>
 		<article class="stop">
