--- a/aboutus.html
+++ b/aboutus.html
@@ -186,12 +186,23 @@
 		<article class="stop">
 		  <div class="text">
 			<header>
-			  <h2>Solid-state drive</h2>
-			  <time>2000</time> - SanDisk
-			</header>
-			<p>A type of storage device that uses flash memory to store data.</p>
-			<img src="https://assets.codepen.io/159218/ssd.jpg" alt="" />
-		  </div>
+				<h2> 2022-2023</h2>
+			  </header>
+			  <p><strong>EDD-Entrepreneurship Development Drive IIT Madras Ecell:</strong><br><br>
+				Participation in the Growth Track to elevate the organization.<br><br>
+			<strong>Entrepreneurship Awareness Event:</strong><br><br>
+			Conducted by Rajalakshmi Engineering College's EDC.<br>
+			Included technical and non-technical competitions, peer learning sessions, and workshops.<br>
+			<br><br>
+			<strong>NEC IIT Bombay:</strong><br><br>
+			Participation in the national entrepreneurial competition.<br><br>
+			<strong>Idea Search Campaign:</strong>
+			<br>Search for start-up ideas and support for students interested in entrepreneurship.<br><br>
+			<strong>PALS (Pathway from engineering to product development and entrepreneurship)</strong><br>
+			Backed by Nativelead to connect experienced residents with budding entrepreneurs.<br><br>
+		
+		</p>
+		</div>
 		</article>
 		<article class="stop">
 		  <div class="text">
@@ -213,7 +224,16 @@
 			<img src="https://images.unsplash.com/photo-1517685352821-92cf88aee5a5?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODk2MDA3NDJ8&ixlib=rb-4.0.3&q=85" alt="" />
 		  </div>
 		</article>
-	  
+		<article class="stop">
+			<div class="text">
+			  <header>
+				<h2>Cloud storage</h2>
+				<time>2007</time> - Amazon Web Services
+			  </header>
+			  <p>A service that allows users to store data on remote servers.</p>
+			  <img src="https://images.unsplash.com/photo-1517685352821-92cf88aee5a5?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE2ODk2MDA3NDJ8&ixlib=rb-4.0.3&q=85" alt="" />
+			</div>
+		  </article>
 </main>
 <a href="#" class="top">Back to Top &#8593;</a>
 	  <footer>
