--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
     <div>
         
         <h3>Contact Information</h3>
-        <p>Email: <a href="mailto:coordinator@example.com">coordinator@example.com</a></p>
-        <p>Email: <a href="mailto:president@example.com">president@example.com</a></p>
-        <p>Coordinator: +123456789</p>
-        <p>President: +987654321</p>
+        <p>Email: <a href="mailto:coordinator@example.com">coordinator@gmail.com</a></p>
+        <p>Email: <a href="mailto:president@example.com">president@gmail.com</a></p>
+        <p>Coordinator: +1234567890</p>
+        <p>President: +9876543210</p>
     </div>
 </footer>
 </body>
